refactor AccountData, AccountStorage, Cryptographer, EntryData, and Main classes for improved structure and functionality