@@ -10,16 +10,14 @@ import javax.crypto.SecretKey;
 import java.util.Base64;
 import java.util.List;
 
-public class Main {
+public final class Main {
 
     public static void main(final String[] args) throws Exception {
         final CryptoUtils cryptoUtils = new CryptoUtils();
         final Cryptographer cryptographer = new Cryptographer();
         final AccountStorage accountStorage = new AccountStorage();
 
-        final String filePath = "account.json";
-
-        // === Registrierung: Masterpasswort einmalig ===
+        // === Registrierung ===
         final char[] masterPassword = "SehrSicheresMasterPasswort#2025".toCharArray();
         final String verificationHash = cryptoUtils.createVerificationHash(masterPassword);
         final String encryptionSaltBase64 = cryptoUtils.generateEncryptionSaltBase64();
@@ -38,7 +36,7 @@ public class Main {
 
         final byte[] additionalAuthenticationData = "user:1234".getBytes();
 
-        // === Beispiel Vault-Eintrag erstellen und verschlüsseln ===
+        // === Vault-Eintrag erstellen & verschlüsseln ===
         final EntryData vaultEntry = new EntryData(
                 "Bank",
                 "MeinSuperGeheimesPasswortFürBank",
@@ -58,23 +56,31 @@ public class Main {
                 List.of(vaultEntry)
         );
 
-        // === Speichern ===
-        accountStorage.save(accountData, filePath);
-        System.out.println("Account gespeichert: " + filePath);
+        // === Speichern – nur einmalig ===
+        try {
+            accountStorage.save(accountData);
+            System.out.println("Account gespeichert: " + accountStorage.getDefaultFile().getAbsolutePath());
+        } catch (final Exception e) {
+            System.out.println("Speichern nicht möglich: " + e.getMessage());
+        }
 
         // === Laden + Entschlüsseln ===
-        final AccountData loadedAccount = accountStorage.load(filePath);
+        final AccountData loadedAccount = accountStorage.load();
         final SecretKey reloadedAesKey = cryptoUtils.deriveEncryptionKey(
                 "SehrSicheresMasterPasswort#2025".toCharArray(),
                 Base64.getDecoder().decode(loadedAccount.getEncryptionSaltBase64())
         );
 
-        final EntryData decryptedEntry = loadedAccount.getEntries().getFirst();
+        final EntryData decryptedEntry = loadedAccount.getEntries().get(0);
         decryptedEntry.decrypt(reloadedAesKey, additionalAuthenticationData, cryptographer);
 
         System.out.println("Entschlüsseltes Passwort: " + decryptedEntry.getEncryptedPassword());
         System.out.println("Entschlüsselte URL: " + decryptedEntry.getUrl());
         System.out.println("Entschlüsselter Username: " + decryptedEntry.getUsername());
+
+        // === Datei löschen ===
+        // boolean deleted = accountStorage.delete();
+        // System.out.println("Datei gelöscht: " + deleted);
     }
 
 }
